# bitcpy

./: .gitignore  CMakeLists.txt  bitcpy_0.c  bitcpy_1.c  bitcpy_test_gen.py  main.c
cmake/: cross_armhf_clang.cmake
